package ucf.assignments;

/*
 *  UCF COP3330 Summer 2021 Assignment 5 Solution
 *  Copyright 2021 Ivedent Lloyd III
 */


import javafx.application.Application;
import javafx.fxml.FXMLLoader;
import javafx.scene.Parent;
import javafx.scene.Scene;
import javafx.stage.Stage;
import java.io.IOException;

    public class InventoryApp extends Application {

        public static void main(String[] args) {
            launch(args);
        }

        @Override
        public void start(Stage primaryStage) {
            try {
                Parent root = FXMLLoader.load(getClass().getResource("AppMainWindow.fxml"));

                Scene scene = new Scene(root);

                primaryStage.setScene(scene);
                primaryStage.setTitle("Inventory Tracker");
                primaryStage.show();

            } catch (IOException e) {
                e.printStackTrace();
            }
        }
    }
